<resources>

    <string name="app_name">Resp</string>
    <string name="create_question">Crear Pregunta</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Resp</string>
    <string name="text_teacher_mode">Modo Profesor</string>
    <string name="text_student_mode">Modo Alumno</string>
    <string name="title_activity_teacher_mode">TeacherModeActivity</string>
    <string name="room">Sala Virtual:</string>
    <string name="response">Respuesta:</string>
    <string name="send">Enviar respuesta</string>
    <string name="debug">debug</string>
    <string name="not_avariable">No disponible</string>
    <string name="question">Pregunta:</string>
    <string name="temp">Temp</string>
    <string name="activated">Activada</string>
    <string name="activate">Activar</string>
    <string name="type">Tipo:</string>
    <string name="free">Libre</string>
    <string name="choices">Alternativas:</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="add_choice">Agregar Alternativa</string>
    <string name="max_choices">Máximo 6 alternativas</string>
    <string name="title_activity_student_mode">StudentModeActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="ask_enter_code">Escribe el código de la sala del profesor</string>
    <string name="incorrect_code">El código de sala es incorrecto</string>
    <string name="cannot_connect">No se pudo conectar a la sala</string>
    <string name="delete_alert_title">Confirme borrado</string>
    <string name="delete_alert_text">Realmente desea borrar la pregunta?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="resend">Reenviar pregunta</string>
    <string name="delete_counters">Borrar contadores</string>
    <string name="join_room">Ingresar</string>
    <string name="about">Acerca de</string>
    <string name="export">Exportar</string>
    <string name="Resumen">Este proyecto se fundamenta en el interés por lograr una mejor dinámica educativa. El objetivo de Resp es tener a todos los alumnos presentes en la clase interactuando con el profesor y a la vez el profesor conocer que es lo que han aprendido/piensan los alumnos.</string>
    <string name="Equipo">El Equipo \n Rocío Aparicio Diseñadora \n Mauricio Giadach Programador \n Benjamín Mac-Clure Programador \n Gustavo Soto Ridd  Programador</string>
    <string name="Agradecimientos">Agradecemos a todas las personas que hicieron de Resp una mejor aplicación, profesor@s, compañeros, etc</string>
    <string name="subject">Resultados Resp</string>
    <string name="question_send_to">Pregunta enviada a</string>
    <string name="students">alumnos</string>
    <string name="conex">Conexión WiFi</string>
    <string name="conex_question">Resp necesita que esté conectado a una red WiFi. ¿Desea conectarse ahora?</string>
    <string name="conex_warning">Debe activar la conexion WiFi para que Resp pueda funcionar</string>

    <string name="must_wait">Debes esperar a en esta ventana hasta que tu profesor envie una pregunta</string>
	<string name="export_all">Exportar Respuestas</string>

	<string name="connection_error">Error de conexión \nAsegúrate de estar en la misma red WiFi que tu profesor</string>
    <string name="delete_all">Borrar Respuestas</string>
    <string name="export_error">No hay respuestas que exportar</string>
    <string name="delete_answers">Respuestas Borradas</string>
    <string name="main_menu">Menu Principal</string>
	<string name="tutorial1">RESP permite entregar feedback instantáneo a los profesores. Esta aplicación consta de dos modos: Modo Profesor y Modo Alumno. Veremos inicialmente el Modo Profesor, por favor presiona el botón adelante para continuar.</string>
    <string name="tutorial2">En el modo profesor se destacan:  Arriba la Sala Virtual, a la cual debe conectarse el alumno, se debe recordar que ambos deben estar  en la misma red WiFi; el botón Crear Pregunta;y  abajo las preguntas que se han creado. Inicialmente por defecto la aplicación trae un set de preguntas predeterminadas. Ahora veremos la interfaz de crear pregunta.</string>
   <string name="tutorial3">Es posible ingresar la pregunta, se pueden agregar hasta seis (6) alternativas y además permite eliminar las alternativas que se desee, finalmente presionando el botón guardar, la pregunta y sus alternativas quedan guardadas.</string>
   <string name="tutorial4">La pregunta  guardada se coloca al final de la lista. Y ahora es posible activarla, editarla y borrarla. Al poner el botón activar la pregunta se envía a los alumnos y  pasamos a la pantalla donde se observan las respuestas de los alumnos.</string>
   <string name="tutorial5">Inicialmente no aparece el gráfico presentado, pues lo alumnos no han respondido aún. Luego, los alumnos responden la pregunta y es posible observar numéricamente(a la izquierda) y gráficamente(al centro) las respuestas de ellos, tal como se observa en la figura.  </string>
   <string name="tutorial6">Ahora ingresaremos al modo alumno.</string>
   <string name="tutorial7">El alumno debe ingresar el código de la sala entregado por el profesor,  además debe preocuparse que se encuentren en la misma red WiFi que la del profesor.</string>
   <string name="tutorial8">El alumno inicialmente no posee ninguna pregunta. Cuando el profesor envía la pregunta le aparece la pantalla presentada. Ahora puede elegir la alternativa que desee, presionando en los botones que poseen colores.</string>
   <string name="tutorial9">Una vez presionada la pregunta aparece un mensaje de confirmación en el dispositivo del alumno. Automáticamente en la vista del profesor se actualizan los valores numéricos de las respuestas y  el gráfico de manera instantánea.</string>
   <string name="tutorial10">Algunas de las características adicionales de RESP: 1.-Al presionar el botón menú  en la pantalla de preguntas del profesor del dispositivo permite exportar todas las preguntas con respuestas utilizando alguna aplicación común de android, por ejemplo Gmail. 2.- Además es posible borrar todas las respuestas a todas las preguntas.  </string>
   <string name="tutorial11">Similarmente si uno desea exportar sólo una pregunta en particular al activar una pregunta en el modo profesor. Haz llegado al final del tutorial, ¡Felicitaciones!.</string>
	
	<string name="atras">Atrás</string>
	<string name="adelante">Adelante</string>
	
	<string-array name="question_types_array">
        <item>Alternativas</item>
        <item>Libre</item>
    </string-array>
    <string-array name="choice_letters_array">
        <item>A)</item>
        <item>B)</item>
        <item>C)</item>
        <item>D)</item>
        <item>E)</item>
        <item>F)</item>
    </string-array>

    <string name="title_activity_server_test">ServerTestActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_student_final_mode">StudentRoomActivity</string>
    <string name="title_activity_student_room">StudentRoomActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
