<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_marfil" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_create_question"
        android:layout_alignParentRight="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/text_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_avariable"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_questionsa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_create_question"
        android:background="@android:color/transparent"
		android:cacheColorHint="@android:color/transparent"
		android:dividerHeight="3dp">

    </ListView>

    <Button
        android:id="@+id/button_create_question"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/blue_button"
        android:onClick="launchCreateQuestionActivity"
        android:padding="@dimen/padding_large"
        android:text="@string/create_question" />

</RelativeLayout>
